<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.GetstartedActivity"
    android:background="@drawable/getstarted">

    <TextView
        android:id="@+id/tvwelcome"
        android:layout_width="282dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="56dp"
        android:gravity="top"
        android:letterSpacing="0.05"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_text"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvsolutions"
        android:layout_width="280dp"
        android:layout_height="20sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="490dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:text="@string/welcome_text1"
        android:textColor="@color/black"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="550dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:id="@+id/btngetstartedsignup"
            android:text="@string/getstarted_signup" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/btngetstartedsignin"
            android:text="@string/getstarted_signin" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        android:lineSpacingExtra="12sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:textSize="12sp"
        android:text="@string/welcome_text2"/>
</RelativeLayout>